# fiml

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  Makefile  skills-lock.json
.github/workflows/: build.yml  ci.yml
benches/: ring_buffer.rs  sma.rs
crates/fiml/: Cargo.toml
crates/fiml-python/: Cargo.toml  README.md  pyproject.toml
crates/fiml-python/examples/: quickstart.py
crates/fiml-python/python/fiml/: __init__.py
crates/fiml-python/src/: lib.rs
crates/fiml-python/tests/: test_api.py  test_event_replay_parity.py
crates/fiml/benches/: extractor_dispatch.rs  ring_buffer.rs  sma.rs
crates/fiml/examples/: binance_trades.rs  feature_extractor.rs  feature_set_from_json.rs  replay_trades.rs  simple_pipeline.rs  spec_engine.rs
crates/fiml/src/: lib.rs  ring_buffer.rs  types.rs  vectors.rs
crates/fiml/src/features/: builder.rs  compiler.rs  definition.rs  engine.rs  event.rs  extractor.rs  feature_set.rs  indicator_vector.rs  mod.rs  spec.rs
crates/fiml/src/features/builtin/: cvd.rs  day_of_week.rs  ema.rs  mod.rs  obv.rs  session.rs  sma.rs  time_since_first_event_of_day.rs  trade_count.rs
crates/fiml/src/features/pipeline/: mod.rs
crates/fiml/src/indicators/: builder.rs  mod.rs
crates/fiml/src/indicators/averages/: mod.rs
crates/fiml/src/indicators/averages/ema/: builder.rs  indicator.rs  mod.rs
crates/fiml/src/indicators/averages/sma/: indicator.rs  mod.rs
crates/fiml/src/indicators/counts/: mod.rs  trade_count.rs
crates/fiml/src/indicators/volume/: mod.rs
crates/fiml/src/indicators/volume/cvd/: indicator.rs  mod.rs
crates/fiml/src/indicators/volume/obv/: builder.rs  indicator.rs  mod.rs
docs/adr/: 0001-python-trade-dataframe-boundary.md  0002-unify-indicator-definition-and-compilation.md
docs/issues/: 2026-07-12-python.md
docs/specs/: python.md  python2027-07-14.md
examples/: binance_trades.rs  simple_pipeline.rs
notebooks/: binance_trades.ipynb  feature_set.json  feature_set_serialization.ipynb  price_data_binance_trades.csv  pyproject.toml  test.ipynb  trades.csv
src/: lib.rs  ring_buffer.rs  ticker.rs  types.rs  vectors.rs
src/builder/: ema.rs  mod.rs  sma.rs
src/features/: builder.rs  builtin.rs  ctx.rs  event.rs  feature.rs  indicator_vector.rs  mod.rs  pipeline.rs  spec.rs  vector.rs
src/features/builtin/: day_of_week.rs  ema.rs  mod.rs  obv.rs  sma.rs
src/features/indicators/: day_of_week.rs  ema.rs  mod.rs  sma.rs
src/features/pipeline/: mod.rs  stage.rs
src/features/transformers/: mod.rs  scaler.rs
src/indicators/: averages.rs  builder.rs  mod.rs
src/indicators/averages/: ema.rs  mod.rs  sma.rs
src/indicators/averages/ema/: builder.rs  mod.rs
src/indicators/averages/sma/: builder.rs  indicator.rs  mod.rs
src/indicators/volume/: mod.rs
