[package]
name = "fiml"
version = "0.1.0"
edition = "2024"

[features]
default = []
decimal = ["dep:rust_decimal"]

[dependencies]
rust_decimal = { version = "1.12.1", optional = true }

[dev-dependencies]
anyhow = "1.0"
criterion = { version = "0.8", features = ["html_reports"] }
rand = "0.10"

[[bench]]
name = "sma"
harness = false

[[bench]]
name = "ring_buffer"
harness = false
