[workspace]
resolver = "3"
members = ["crates/fiml", "crates/fiml-python"]
# Keep core as the only default member so `cargo build`/`test`/`clippy` at the
# root stay dependency-free and do not require a Python toolchain. Build the
# bindings explicitly with `-p fiml-python` or via maturin.
default-members = ["crates/fiml"]
