[package]
name = "fiml-python"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
# Named `_fiml` (not `fiml`) so it does not clash with the core `fiml` crate it
# depends on. The Python package `fiml` re-exports it (see python/fiml).
name = "_fiml"
crate-type = ["cdylib"]

[dependencies]
fiml = { path = "../fiml", features = ["serde"] }
# abi3 builds one wheel that works across CPython >= 3.12, including newer
# interpreters than this PyO3 release knows about.
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py312"] }
numpy = "0.23"
serde_json = "1.0"
