[package]
name = "fiml"
version = "0.1.0"
edition = "2024"

[features]
default = []
decimal = ["dep:rust_decimal"]
tracing = ["dep:tracing"]
serde = ["dep:serde"]

[dependencies]
rust_decimal = { version = "1.12.1", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
tracing = { version = "0.1", optional = true, default-features = false }

[dev-dependencies]
rustls = { version = "0.23", features = ["aws_lc_rs"] }


anyhow = "1.0"
criterion = { version = "0.8", features = ["html_reports"] }
futures = "0.3"
rand = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
tungstenite = "0.29"
[[example]]
name = "feature_extractor"
required-features = ["serde"]

[[example]]
name = "feature_set_from_json"
required-features = ["serde"]

[[bench]]
name = "sma"
harness = false

[[bench]]
name = "ring_buffer"
harness = false

[[bench]]
name = "extractor_dispatch"
harness = false
